# FinPileTokenizers

./: README.md  pyproject.toml
example/: train.py
fsiltok/: main.py
fsiltok/utils/: data.py
test/: test_data.idx  test_data.py
