[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fsiltok"
version = "0.1.0"
description = "A very simple tokenizer for FSIL"
authors = [
    { name="Rodrigo Loza", email="roloza7@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "CCO-1.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

# Do NOT add torch to these dependencies. Let the user figure it out lest we download the wrong version.
dependencies = [
    "transformers",
    "orjson",
    "xopen",
    "tqdm",
    "numpy"
]

[project.scripts]
fsiltok = "fsiltok.main:main"
